correction in footer for overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1237,7 +1237,6 @@ footer {
     gap: 20px;
   }
   .footerMedia {
-    border: 1px solid white;
     display: flex;
     gap: 20px;
     justify-content: flex-start;
@@ -1429,7 +1428,6 @@ footer {
     gap: 20px;
   }
   .footerMedia {
-    border: 1px solid white;
     display: flex;
     gap: 20px;
     justify-content: flex-start;
@@ -1662,7 +1660,6 @@ footer {
     align-items: center;
   }
   .footerMedia {
-    border: 1px solid white;
     display: flex;
     gap: 20px;
     justify-content: flex-start;
